changes on website page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         <ul>
             Currently Working on: 
             <li>Design and co-production of Zine Camp Festival 2023 with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
-            <li>Co-design and co-production of the Taking care publication with Kendal Beynon for <a href="https://takingcareproject.eu/article/taking-care-re-creating-kinship-in-the-ethnographic-museum-in-europe-conference" target="_blank">Museum Volkenkunde.</a>
             <li>Ongoing publishing collaboration with Maria Paris in <a href="https://www.attempt.press/" target="_blank">attempt.</a></li>     
         </ul>
         <br>
@@ -54,7 +53,8 @@
         <p>Visual design, Web design, Publication design, Book design, Web-to-print, RISO Printing, Bookbinding, Paged.js, Web developing, HTML, CSS, SCSS, JS, Python (basic), Flask (familiar), Debian System, CLI, GIT, BITSY, Figma, Indesign, Photoshop, Illustrator, Drawing, Painting, Illustration.</p>
         <br>
         <h1>⤷ Recent Selected Work</h1>
-        <ul>   
+        <ul> 
+            <li>2023 | Co-design and co-production of <a href="https://digestingcare.eu">Digesting Care</a> the Taking care publication with Kendal Beynon for <a href="https://takingcareproject.eu/article/taking-care-re-creating-kinship-in-the-ethnographic-museum-in-europe-conference" target="_blank">Museum Volkenkunde.</a>  
             <li>2023 | Zine Workshop in collaboration with Kendal Beynon for <a href="https://newmetropolis.amsterdam/programma/the-trees-will-remain-finissage-zine-making-workshop" target="_blank">The Trees will Remain</a> exhibition. New Metropolis. Amsterdam, NL.</li>
             <li>2023 | Webdesign and development for <a href="https://www.dekapitalisten.nl/" target="_blank">Dekapitalisten</a> in collaboration with <a href="https://www.appliedcreative.nl/" target="_blank">Niels Janssen</a> project from Het Nut. Ultrech, NL.</li>
             <li>2023 | Research and webdesign collaboration for <a href="https://creativecoding.community/">Creative Coding Ecologies</a> project from <a href="https://creativecodingutrecht.nl/" target="_blank">CCU</a>. Ultrech, NL.</li>
