--- a/websites/index.html
+++ b/websites/index.html
@@ -31,6 +31,19 @@
         width: 100%;
     }
 
+    .website-img{
+        width: 100%;
+    }
+
+    /* tr{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #table-description{
+        display: auto;
+    } */
+
 </style>
 <body>
 
