Changes on websites structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Camilo Garcia A.">
-    <meta name="keywords" content="web-to-print, visual arts, book design, graphic design, publishing">
+    <meta name="keywords" content="web design, web-to-print, visual arts, book design, graphic design, publishing">
     <meta name="description" content="I´m Camilo, a visual artist and designer from Bogota currently based in Rotterdam. My work usually starts with a question that prolongs itself through visual systems and publications. During the process, questions make, stretch and subvert connections between nature, language, time, cybernetics, poetry, and conversation.">
     <link rel="stylesheet" href="style.css"> 
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="intro mobile"> ⤷ Hey, <br><br> don't waste your time and data scrolling on this website on your phone, check it later on a bigger screen, <br><br> Camilo 👀</div>
+    <div class="intro mobile"> ⤷ Hey, <br><br> Finally, I'm working on a mobile version of my website, no there yet tho, <br><br> Camilo 👀</div>
 
     <div class="section bogota">
         <img src="images/Bogota.jpg" width="100%" height="100%">
@@ -181,152 +181,6 @@
            
 </div>
 
-<!------------------------------ WEBSITES ----------------------------->
-
-<table class="section websites">
-    <colgroup span="3"></colgroup>
-    <tbody>
-        <tr>
-            <th width="50%">Website</th>
-            <th width="40%">Description</th>
-            <th width="10%">URL <span class="close-btn1">✕</span></th>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://creativecoding.community/" target=”_blank”>Creative Coding Ecologies</a></summary><a href="https://creativecoding.community/"><img class="website-img" src="images/websites/ce-ccu.gif" loading="lazy"></a></details></td>
-            <td>This project is a work in process of mapping the creative coding community around the world. We are offering a way to explore and investigate, and also add yourself as an entity by answering the following <a href="https://mapping.creativecodingutrecht.nl/">survey</a><br>
-                🏓 Design Collab: Avital Barkai.<br>
-                🛠 Developers: Felipe Ignacio Noriega, Niels Janssen, Raphael Sousa Santos, and Sietse van der Meer.<br>
-                ✏️ Tools: Figma, HTML, SCSS, JS. <br>
-            </td>
-            <td><a href="https://www.dekapitalisten.nl/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.dekapitalisten.nl/" target=”_blank”>De Kapitalisten</a></summary><a href="https://www.dekapitalisten.nl/"><img class="website-img" src="images/websites/dekapitalisten.gif" loading="lazy"></a></details></td>
-            <td>Website design and development for the project De Kapitalisten in collaboration with <a href="https://www.appliedcreative.nl/" target="_blank">Niels Janssen</a> project from Het Nut.<br>
-                👟: Design and developed in two days.<br>
-                ✏️ Tools: Svelte, HTML, CSS, JS. <br>
-            </td>
-            <td><a href="https://www.dekapitalisten.nl/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”>Borrar con el dedo lo que se hace con otro</a></summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/"><img class="website-img" src="images/websites/borrarconeldedo.gif" loading="lazy"></a></details></td>
-            <td>Website design and development for the art exhibition "borrar con el dedo lo que se hace con otro" by <a href="https://www.rastro.studio/" target="_blank">Rastro</a> <br>
-                🏓 Design Collab: Maria Paris.<br>
-                ✏️ Tools: HTML, CSS, JS. <br>
-            </td>
-            <td><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.rastro.studio/" target=”_blank”>Rastro</a></summary><a href="https://www.rastro.studio/"><img class="website-img" src="images/websites/rastrostudio.gif" loading="lazy"></a></details></td>
-            <td>Website design and development for the collective <a href="https://www.instagram.com/rastro.bog/" target="_blank">Rastro</a> through <a href="https://attempt.press" target="_blank">attempt</a><br>
-                🏓 Design Collab: Maria Paris.<br>
-                ✏️ Tools: HTML, CSS, JS. <br>
-            </td>
-            <td><a href="https://www.rastro.studio/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://diffraction.attempt.press/permeable-territories/" target=”_blank”>Permeable Territories</a></summary><a href="http://diffraction.attempt.press/permeable-territories/"><img class="website-img" src="images/websites/permeableterritories.gif" loading="lazy"></a></details></td>
-            <td>Web-to-print for the thesis Permeable territories website part of attempting diffraction project. <br>
-                ✏️ Tools: HTML, CSS, JS, paged.js. <br>
-                🌱 Self-hosted.<br>
-            </td>
-            <td><a href="http://diffraction.attempt.press/permeable-territories/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://zinecamp2022.hotglue.me/">Zine Camp Festival 2022</a></summary><a href="https://zinecamp2022.hotglue.me/"><img class="website-img" src="images/websites/zinecampt2022.gif" loading="lazy"></a></details></td>
-            <td>Web design design for Zine camp festival in Rotterdam (2022) <br>
-                ✏️ Tools: Hotglue. <br>
-            </td>
-            <td><a href="https://zinecamp2022.hotglue.me/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://hub.xpub.nl/sandbot/walkie-talkie/" target=”_blank”>Walkie-Talkie Publication</a></summary><a href="https://hub.xpub.nl/sandbot/walkie-talkie/"><img class="website-img" src="images/websites/walkie-talkie.gif" loading="lazy"></a></details></td>
-            <td>Web-to-print Walkie Talkie pub with protocol design.<br>
-                🏓 Design Collab: Floor van Meeuwe, Jacopo Lega.
-                ✏️ Tools: HTML, CSS, JS, paged.js<br>
-                </td>
-            <td><a href="https://hub.xpub.nl/sandbot/walkie-talkie/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://garden.attempt.press" target=”_blank”>Termporary Garden Server</a></summary><a href="http://garden.attempt.press"><img class="website-img" src="images/websites/garden.gif" loading="lazy"></a></details></td>
-            <td>Index for Temporary garden, our little server.<br>
-                ✏️ Tools: HTML, CSS. <br>
-                🌱 Self-hosted.</td>
-            <td><a href="http://garden.attempt.press" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://dear.attempt.press" target=”_blank”>Dear Reader</a></summary><a href="http://dear.attempt.press"><img class="website-img" src="images/websites/dear-reader.gif" loading="lazy"></a></details></td>
-            <td>It is a letter and micro flask app for <a href="http://attempt.press">attempt</a>. You can read, share and constribute. <br>
-                ✏️ Tools: Html, CSS, Flask, Python. <br>
-                🌱 Self-hosted <br>
-                🏓 Editing Collab: Maria Paris</td>
-            <td><a href="http://dear.attempt.press" target="_blank"><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://glossary.attempt.press" target=”_blank”>Living Glossary for a Diffractive Publishing Practice</a></summary><a href="http://glossary.attempt.press"><img class="website-img" src="images/websites/glossary-photos.gif" loading="lazy"></a></details></td>
-            <td>The website of the project that gathers all the entries. <br>
-                ✏️ Tools: Html, CSS, JS, JSON, Python.<br>
-                🌱 Self-hosted </td>
-            <td><a href="http://glossary.attempt.press" target="_blank"><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://diffraction.attempt.press" target=”_blank”>Diffraction Page</a></summary><a href="http://diffraction.attempt.press"><img class="website-img" src="images/websites/diffraction.gif" loading="lazy"></a></details></td>
-            <td>A website that collects all attempts to diffract. Exploring SVG's in the front page. <br>
-                ✏️ Tools: Html, CSS, JS. <br>
-                🌱 Self-hosted</td>
-            <td><a href="http://diffraction.attempt.press" target=”_blank”><button class="url">⤴︎</button></a><br> 
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://tool.diffraction.attempt.press" target=”_blank”>Glossary Enviroment tool</a></summary><a href="http://tool.diffraction.attempt.press"><img class="website-img" src="images/websites/living-tool-photos.gif" loading="lazy"></a></details></td>
-            <td>Web design and development of this experimental tool to start writing living glossaries. <br>
-                ✏️ Tools: Html, CSS, Flask, Python. <br>
-                🌱 Self-hosted </td>
-            <td><a href="http://tool.diffraction.attempt.press" target=”_blank”><button class="url">⤴︎</button></a><br></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://attempt.press" target=”_blank”>Attempt's Portfolio</a></summary><a href="http://attempt.press"><img class="website-img" src="images/websites/attempt.gif" loading="lazy"></a></details></td>
-            <td>Web design, drawings and development of attempts portfolio<br>
-                ✏️ Tools: Html, Css, JavaScript, drawing. <br>
-                🌱 Self-hosted <br>
-                🏓 Design Collab: Maria Paris</td>
-            <td><a href="http://attempt.press" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.guillotina.art/" target=”_blank”>Guillotina Art</a></summary><a href="https://www.guillotina.art/"><img class="website-img" src="images/websites/guillotina.gif" loading="lazy"></a></details></td>
-            <td>Simple portfolio Web design and development for Guillermo Garcia<br>
-                🌱 Self-hosted <br>
-                ✏️ Tools: HTML, CSS, JS<br></td>
-            <td><a href="https://www.guillotina.art/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://zinecamp2021.hotglue.me/" target=”_blank”>ZineCamp Festival 2021</a></summary><a href="https://zinecamp2021.hotglue.me/"><img class="website-img" src="images/websites/zinecamp2021.jpg" loading="lazy"></a></details></td>
-            <td>Web design design for Zine camp festival in Rotterdam (2021)<br>
-                ✏️ Tools: Hotglue. <br>
-            </td>
-            <td><a href="https://zinecamp2021.hotglue.me/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://issue.xpub.nl/15/index.html" target=”_blank”>Radio Implicances Archive</a></summary><a href="https://issue.xpub.nl/15/index.html"><img class="website-img" src="images/websites/radio-final.gif" loading="lazy"></a></details></td>
-            <td>Publication Archive for Special Issue 15<br>
-                ✏️ Tools: HTML, CSS. <br>
-                🏓 Design Collab: Jacopo Lega</td>
-            <td><a href="https://issue.xpub.nl/15/index.html" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://hub.xpub.nl/sandbot/SI15/Radio_1/" target=”_blank”>Radio 1</a></summary><a href="https://hub.xpub.nl/sandbot/SI15/Radio_1/"><img class="website-img" src="images/websites/radio-1.jpg" loading="lazy"></a></details></td>
-            <td>First Chapter of Radio Implicancies<br>
-                ✏️ Tools: HTML, CSS, IceCast, liquid Soap. <br>
-                🏓 Design Collab: Jacopo Lega</td>
-            <td><a href="https://hub.xpub.nl/sandbot/SI15/Radio_1/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://issue.xpub.nl/13/ATATA/" target=”_blank”>Atata</a></summary><a href="https://issue.xpub.nl/13/ATATA/"><img class="website-img" src="images/websites/atata.gif" loading="lazy"></a></details></td>
-            <td>Republishing essay for Wor(l)ds for the future project.<br>
-                ✏️ Tools: Html, Css, JavaScript, Python, Nltk</td>
-            <td><a href="https://issue.xpub.nl/13/ATATA/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-    </tbody>
-</table>
 
 <!------------------------------ SYSTEMS ----------------------------->
 
@@ -724,7 +578,7 @@
             <p>This website lives in a <a href="http://garden.attempt.press" target="_blank">temporary garden</a>, a small server hosted and maintained by me for <a href="https://www.attempt.press" target="_blank">attempt</a> and others. </p>
         </div>
     <b>⤷</b> I´m <span class="intro_link CV_link">Camilo</span>, a visual artist and designer from <span class="intro_link bogota_link">Bogota</span> currently based in <span class="intro_link rotterdam_link">Rotterdam.</span>
-    My work usually starts with a question that prolongs itself through <span class="intro_link systems_link"> visual systems</span> and <span class="intro_link pub_link">publications</span><span class="intro-link pub-hidden"><span class="intro_link books_link">: books,</span><span class="intro_link websites_link"> websites</span> and <span class="intro_link objects_link"> more</span></span>. During <span class="intro_link process_link">the process</span>, questions make, stretch and subvert connections between nature, language, time, cybernetics, poetry, and conversation. 
+    My work usually starts with a question that prolongs itself through <span class="intro_link systems_link"> visual systems</span> and <span class="intro_link pub_link">publications</span><span class="intro-link pub-hidden"><span class="intro_link books_link">: books,</span><span class="intro_link websites_link"> <a href="/websites/index.html">websites</a></span> and <span class="intro_link objects_link"> more</span></span>. During <span class="intro_link process_link">the process</span>, questions make, stretch and subvert connections between nature, language, time, cybernetics, poetry, and conversation. 
     </div>
 
     <div id="verbs-cnt">
