change order on wbsites

--- a/websites/index.html
+++ b/websites/index.html
@@ -67,6 +67,15 @@
             <td><a href="https://creativecoding.community/" target=”_blank”><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
+            <td><details open><summary><a href="http://attempt.press" target=”_blank”>Attempt's Portfolio</a></summary><a href="http://attempt.press" target=”_blank”><img class="website-img" src="../images/websites/attempt.gif" loading="lazy"></a></details></td>
+            <td>Web design, drawings and development for attempt's portfolio<br>
+                <p>✏️ Tools: Html, Css, JavaScript, drawing.</p>
+                <p>🌱 Self-hosted</p>
+                <p>🏓 Design Collab: Maria Paris</p>
+            </td>
+            <td><a href="http://attempt.press" target=”_blank”><button class="url">⤴︎</button></a></td>
+        </tr>
+        <tr>
             <td><details open><summary><a href="https://creativecoding.community/" target=”_blank”>Creative Coding Ecologies</a></summary><a href="https://creativecoding.community/" target=”_blank”><img class="website-img" src="../images/websites/ce-ccu.gif" loading="lazy"></a></details></td>
             <td>Creative Coding Ecologies is a work-in-process mapping project made by <a href="https://creativecodingutrecht.nl/" target="_blank">CCU</a> aiming to connect the creative coding community around the world. We are offering a way to explore and investigate, and also add yourself as an entity by answering the following <a href="https://mapping.creativecodingutrecht.nl/">survey</a>. The next iteration of the project will focus their attention on relation-ability visualization.<br>
                 <p>🏓 Design Collab: Avital Barkai.</p>
@@ -131,6 +140,14 @@
             <td><a href="https://zinecamp2022.hotglue.me/" target=”_blank”><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
+            <td><details open><summary><a href="http://glossary.attempt.press" target=”_blank”>Living Glossary for a Diffractive Publishing Practice</a></summary><a href="http://glossary.attempt.press" target=”_blank”><img class="website-img" src="../images/websites/glossary-photos.gif" loading="lazy"></a></details></td>
+            <td>The website of the project that gathers all the entries. <br>
+                <p>✏️ Tools: Html, CSS, JS, JSON, Python.</p>
+                <p>🌱 Self-hosted</p> 
+            </td>
+            <td><a href="http://glossary.attempt.press" target="_blank"><button class="url">⤴︎</button></a></td>
+        </tr>
+        <tr>
             <td><details open><summary><a href="https://hub.xpub.nl/sandbot/walkie-talkie/" target=”_blank”>Walkie-Talkie Publication</a></summary><a href="https://hub.xpub.nl/sandbot/walkie-talkie/" target=”_blank”><img class="website-img" src="../images/websites/walkie-talkie.gif" loading="lazy"></a></details></td>
             <td>This website is the web-to-print collective publication for the experimental publication grad show. I designed and developed in collaboration with Floor and Jacopo a protocol that would allow the 10 participants of the publication to write their content and adapt it easily to the design we were working on simultaneously. The protocol explains markdown formatting and their translation via Pandoc to HTML. <br>
                 <p>🏓 Design Collab: Floor van Meeuwe, Jacopo Lega.</p>
@@ -156,14 +173,6 @@
             <td><a href="http://dear.attempt.press" target="_blank"><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
-            <td><details open><summary><a href="http://glossary.attempt.press" target=”_blank”>Living Glossary for a Diffractive Publishing Practice</a></summary><a href="http://glossary.attempt.press" target=”_blank”><img class="website-img" src="../images/websites/glossary-photos.gif" loading="lazy"></a></details></td>
-            <td>The website of the project that gathers all the entries. <br>
-                <p>✏️ Tools: Html, CSS, JS, JSON, Python.</p>
-                <p>🌱 Self-hosted</p> 
-            </td>
-            <td><a href="http://glossary.attempt.press" target="_blank"><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
             <td><details open><summary><a href="http://diffraction.attempt.press" target=”_blank”>Diffraction Page</a></summary><a href="http://diffraction.attempt.press" target=”_blank”><img class="website-img" src="../images/websites/diffraction.gif" loading="lazy"></a></details></td>
             <td>A website that collects all attempts to diffract. Exploring SVG's in the front page. <br>
                 <p>✏️ Tools: Html, CSS, JS. </p>
@@ -172,20 +181,11 @@
             <td><a href="http://diffraction.attempt.press" target=”_blank”><button class="url">⤴︎</button></a><br> 
         </tr>
         <tr>
-            <td><details open><summary><a href="http://tool.diffraction.attempt.press" target=”_blank”>Glossary Enviroment tool</a></summary><a href="http://tool.diffraction.attempt.press" target=”_blank”><img class="website-img" src="../images/websites/living-tool-photos.gif" loading="lazy"></a></details></td>
+            <td><details open><summary><a href="http://tool.attempt.press" target=”_blank”>Glossary Enviroment tool</a></summary><a href="http://tool.diffraction.attempt.press" target=”_blank”><img class="website-img" src="../images/websites/living-tool-photos.gif" loading="lazy"></a></details></td>
             <td>Web design and development of this experimental tool to start writing living glossaries. <br>
                 <p>✏️ Tools: Html, CSS, Flask, Python.</p>
                 <p>🌱 Self-hosted</p>
             <td><a href="http://tool.diffraction.attempt.press" target=”_blank”><button class="url">⤴︎</button></a><br></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="http://attempt.press" target=”_blank”>Attempt's Portfolio</a></summary><a href="http://attempt.press" target=”_blank”><img class="website-img" src="../images/websites/attempt.gif" loading="lazy"></a></details></td>
-            <td>Web design, drawings and development of attempts portfolio<br>
-                <p>✏️ Tools: Html, Css, JavaScript, drawing.</p>
-                <p>🌱 Self-hosted</p>
-                <p>🏓 Design Collab: Maria Paris</p>
-            </td>
-            <td><a href="http://attempt.press" target=”_blank”><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
             <td><details open><summary><a href="https://www.guillotina.art/" target=”_blank”>Guillotina Art</a></summary><a href="https://www.guillotina.art/" target=”_blank”><img class="website-img" src="../images/websites/guillotina.gif" loading="lazy"></a></details></td>
