--- a/thewhole/S1/index (1).html
+++ b/thewhole/S1/index (1).html
@@ -9954,6 +9954,7 @@ CHAR 255
 <body onload='startExportedGame()'>
 	<!-- GAME CANVAS -->
 	<div id="title"><h1>S1./</h1><a href="../index.html"><h2>BACK</h2></a></div>
+	<div id="instructions"><h1>(Use the arrow keys to move around)</h1></div>
 	<canvas id='game'></canvas>
 </body>
 
