--- a/thewhole/S11/index.html
+++ b/thewhole/S11/index.html
@@ -9225,6 +9225,7 @@ CHAR 255
 <body onload='startExportedGame()'>
 	<!-- GAME CANVAS -->
 	<div id="title"><h1>S11./</h1><a href="../index.html"><h2>BACK</h2></a></div>
+	<div id="instructions"><h1>(Use the arrow keys to move around)</h1></div>
 	<canvas id='game'></canvas>
 </body>
 
