--- a/thewhole/S2/index.html
+++ b/thewhole/S2/index.html
@@ -10246,6 +10246,7 @@ Object.defineProperty(exports, '__esModule', { value: true });
 <body onload='startExportedGame()'>
 	<!-- GAME CANVAS -->
 	<div id="title"><h1>S2./</h1><a href="../index.html"><h2>BACK</h2></a></div>
+	<div id="instructions"><h1>(Use the arrow keys to move around)</h1></div>
 	<canvas id='game'></canvas>
 </body>
 
