--- a/thewhole/S4/index.html
+++ b/thewhole/S4/index.html
@@ -9855,6 +9855,7 @@ CHAR 255
 <body style='background-image: url("S4.png");' onload='startExportedGame()'>
 	<!-- GAME CANVAS -->
 	<div id="title"><h1>S4./</h1><a href="../index.html"><h2>BACK</h2></a></div>
+	<div id="instructions"><h1>(Use the arrow keys to move around)</h1></div>
 	<canvas id='game'></canvas>
 </body>
 
