--- a/thewhole/S8/index.html
+++ b/thewhole/S8/index.html
@@ -9682,6 +9682,7 @@ CHAR 255
 <body onload='startExportedGame()'>
 	<!-- GAME CANVAS -->
 	<div id="title"><h1>S8./</h1><a href="../index.html"><h2>BACK</h2></a></div>
+	<div id="instructions"><h1>(Use the arrow keys to move around)</h1></div>
 	<canvas id='game'></canvas>
 </body>
 
