--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
         <br>
         <h1>⤷ Recent Selected Work</h1>
         <ul> 
+            <li>2023 | Visual Design and co-production of <a href="https://zinecamp2023.hotglue.me/" target="_blank">Zine Camp Festival.</a> with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
+            <li>2023 | Publication design and illustration for the publication "Wi Dey Try" by Esther Kamara. Creative Media for Social Change. Amsterdam, NL. </a> 
+            <li>2023 | Graphic Design and print-production of the publication "De kunst van het Wetenschappelijk verhaal". Creative Media for Social Change. Amsterdam, NL. </a> 
             <li>2023 | Co-design and co-production of <a href="https://digestingcare.eu">Digesting Care</a> the Taking care publication with Kendal Beynon for <a href="https://takingcareproject.eu/article/taking-care-re-creating-kinship-in-the-ethnographic-museum-in-europe-conference" target="_blank">Museum Volkenkunde.</a>  
             <li>2023 | Zine Workshop in collaboration with Kendal Beynon for <a href="https://newmetropolis.amsterdam/programma/the-trees-will-remain-finissage-zine-making-workshop" target="_blank">The Trees will Remain</a> exhibition. New Metropolis. Amsterdam, NL.</li>
             <li>2023 | Webdesign and development for <a href="https://www.dekapitalisten.nl/" target="_blank">Dekapitalisten</a> in collaboration with <a href="https://www.appliedcreative.nl/" target="_blank">Niels Janssen</a> project from Het Nut. Ultrech, NL.</li>
             <li>2023 | Research and webdesign collaboration for <a href="https://creativecoding.community/">Creative Coding Ecologies</a> project from <a href="https://creativecodingutrecht.nl/" target="_blank">CCU</a>. Ultrech, NL.</li>
             <li>2022 | Webdesign and development with attempt for <a href="https://www.rastro.studio/" target="_blank">Rastro</a>.</li>
             <li>2022 | Rumination Session #3: On Slowness. <a href=" https://www.eventbrite.nl/e/441153601297" target="_blank">Diffractive publishing Workshop.</a></li>
-            <li>2022 | Design and co-production of <a href="https://zinecamp2022.hotglue.me/" target="_blank">Zine Camp Festival.</a> with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
+            <li>2022 | Visual Design and co-production of <a href="https://zinecamp2022.hotglue.me/" target="_blank">Zine Camp Festival.</a> with <a href="https://floorvanmeeuwen.hotglue.me/start">Floor Van Meeeuwen</a> and <a href="http://virtualgardens.xyz/"> Kendal Beynon</a></li>
             <li>2022 | Zine Making Workshop in collaboration with Kendal Beynon <a href="https://takingcareproject.eu/article/taking-care-re-creating-kinship-in-the-ethnographic-museum-in-europe-conference" target="_blank">Museum Volkenkunde.</a></li>
             <li>2022 | Web development and visual design | <a href="https://project.xpub.nl/attempting-diffraction/" target="_blank">Attempting Diffraction</a>. WORM. Rotterdam, NL.</li>
             <li>2022 | Publication co-production | <a href="https://hub.xpub.nl/sandbot/walkie-talkie/" target="_blank">Walkie-Talkie</a>. Rotterdam, NL.</li>
@@ -94,11 +97,12 @@
         </ul>
         <h1>⤷ Publication Fairs</h1>
         <ul>
+            <li>2023 | Co-production | <a href="https://zinecamp2023.hotglue.me/" target="_blank">ZineCamp</a>. Rotterdam, NL.</li>
             <li>2022 | Co-production | <a href="https://zinecamp2022.hotglue.me/" target="_blank">ZineCamp</a>. Rotterdam, NL.</li>
             <li>2022 | Exhibitor |  <a href="https://grafcomic.com/" target="_blank">GRAF</a>. Barcelona, SPN.</li>
             <li>2021 | Co-production | <a href="https://zinecamp2021.hotglue.me/" target="_blank">ZineCamp</a>. Rotterdam, NL.</li>
             <li>2021 | Exhibitor | <a href="http://www.spreadzinefest.nl/" target="_blank">Spread Festival</a>. Groningen, NL.</li>
-            <li>2020 | Exhibitor | <a href="https://2020.recreoartbookfair.es/ target="_blank"">Recreo</a>. Valencia, SPN </li>
+            <li>2020 | Exhibitor | <a href="https://2020.recreoartbookfair.es/ target="_blank">Recreo</a>. Valencia, SPN </li>
             <li>2019 | Exhibitor | <a href="https://www.p-a-g-e-s.ch/" target="_blank">P.A.G.E.S.</a>. Geneve, Switzerland.</li>
             <li>2019 | Exhibitor | <a href="https://www.facebook.com/notengomamafest/" target="_blank">No Tengo Mamá</a>. Vigo, Spain.</li>
             <li>2019 | Exhibitor | <a href="http://missread.com/" target="_blank">Missread</a>. Berlín, Germany.</li>
