--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+        <!---------  Hello dear inspector, 
+    here you'll find my hand made code  --------->
+
+    <!-------------------  .--.   ----------------->
+    <!---------------    .'_\/_'.    -------------->
+    <!---------------    '. /\ .'      ------------>
+    <!---------------      "||"        ------------>
+    <!---------------       || /\      ------------>
+    <!---------------    /\ ||//\)     ------------>
+    <!---------------   (/\\||/        ------------>
+    <!---------------______\||/_______ ------------>
+
+<!--- take this flower as a present for your curiosity --> 
+
+<!--- write me if you have questions, doubts, ideas, suggestions,
+        or if you have something interesting you would like to host in my server 
+    I have free space that could be use ----------> 
+
 <!DOCTYPE html>
 <html>
 <head>
