changes on text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
 <!--- take this flower as a present for your curiosity --> 
 
-<!--- write me if you have questions, doubts, ideas, suggestions,
-        or if you have something interesting you would like to host in my server 
+<!--- write me if you have questions, 
+                        doubts, 
+                 ideas, 
+         suggestions,
+    or if you have something interesting 
+    you would like to host in my server 
     I have free space that could be use ----------> 
 
 <!DOCTYPE html>
