change on books

--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
     <div class="section books cure"> 
         <div class="book-des-right">
             <h2 class="book-title">Writing Cure</h2>
-            <p>⤷ 32p. 50u. Paper: Arena natural 120g. Hand glue binded. Riso printed in baby pink and light gray by <a href="https://www.terrybleu.com/">Terry Bleu</a>. Book design made in collab with Avital Barkai for the web project <a href="">Writing Cure</a>. 2021. <b>(Available)</b></p>
+            <p>⤷ 32p. 50u. Paper: Arena natural 120g. Hand glue binded. Riso printed in baby pink and light gray. Book design made in collab with Avital Barkai for the web project <a href="">Writing Cure</a>. 2021. <b>(Available)</b></p>
+            <!-- by <a href="https://www.terrybleu.com/">Terry Bleu</a> -->
         </div>
         <figure><img id="cure_cover" class="image_cure_cover" src="images/books/writing/cover.jpg" loading="lazy"><figcaption>cover.png</figcaption></figure>
         <figure><img id="cure_1" class="image_cure" src="images/books/writing/0.jpg" loading="lazy"><figcaption>1.png</figcaption></figure>
