Changes on floatingwords website and adding gifs to the website page

--- a/websites/index.html
+++ b/websites/index.html
@@ -11,6 +11,9 @@
     <title>Camilo García A.</title>
 </head>
 <style>
+    html{
+        background-color: black;
+    }
     .websites{
         display: block;
         width: 100vw;
@@ -64,7 +67,33 @@
                 <p>✏️ Tools: Python, HTML, CSS, JS, Paged.js, Drawing.</p>
                 <p>✂️ Process: <a href="https://takingcareproject.eu/article/an-experimental-publication-a-work-in-progress" target=”_blank”>An experimental publication: a work in progress.</a></p>
             </td>
-            <td><a href="https://creativecoding.community/" target=”_blank”><button class="url">⤴︎</button></a></td>
+            <td><a href="https://digestingcare.eu/" target=”_blank”><button class="url">⤴︎</button></a></td>
+        </tr>
+        <tr>
+            <td><details open><summary><a href="https://camilogarcia.info/floatingwords/" target=”_blank”>Floating Words</a></summary><a href="https://camilogarcia.info/floatingwords/" target=”_blank”><img class="website-img" src="../images/websites/floating-words.gif" loading="lazy"></a></details></td>
+            <td> Web design and development of the website for the project Floating Words exhibited at Soup. explores the limits of language and communication through asemic writing and sustainable production. Alongside small printed publications, I draw and hand-craft words in imaginary alphabets, imprinting them on garments using leftover material and second-hand clothing. <br>
+                <p>🏓 Text Collab: Nicolás A. Castro Pulido.</p>
+                <p>✏️ Tools: HTML, CSS, JS</p>
+                <p>🌱 Self-hosted</p>
+                <p>🏡 Exhibited at: <a href="" target=”_blank”>Soup.</a></p>
+            </td>
+            <td><a href="https://camilogarcia.info/floatingwords/" target=”_blank”><button class="url">⤴︎</button></a></td>
+        </tr>
+        <tr>
+            <td><details open><summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”>Borrar con el dedo lo que se hace con otro</a></summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”><img class="website-img" src="../images/websites/borrarconeldedo.gif" loading="lazy"></a></details></td>
+            <td>Website design and development for the online art exhibition "borrar con el dedo lo que se hace con otro" by <a href="https://www.rastro.studio/" target="_blank">Rastro</a>. "<i>Erasing with one finger what is done with another</i> is a Rastro curatorship that questions the possible materializations that digital repetition makes possible. In the contemporary world where our existence is projected as connected fragments and which is built from small corporeal repetitions, it is necessary to dwell on those daily automatisms that cross us unnoticed like the inertia of a global wave." <br>
+                <p>🏓 Design Collab: Maria Paris.</p>
+                <p>✏️ Tools: HTML, CSS, JS.</p>
+            </td>
+            <td><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”><button class="url">⤴︎</button></a></td>
+        </tr>
+        <tr>
+            <td><details open><summary><a href="https://www.rastro.studio/" target=”_blank”>Rastro</a></summary><a href="https://www.rastro.studio/" target=”_blank”><img class="website-img" src="../images/websites/rastrostudio.gif" loading="lazy"></a></details></td>
+            <td>Website design and development for the collective <a href="https://www.instagram.com/rastro.bog/" target="_blank">Rastro</a>. For this project in collaboration with Maria we design a space that show case their present and future projects. We developed this project under the umbrella of our publishing project called <a href="https://attempt.press" target="_blank">attempt</a><br>
+                <p>🏓 Design Collab: Maria Paris.</p>
+                <p>✏️ Tools: HTML, CSS, JS.</p>
+            </td>
+            <td><a href="https://www.rastro.studio/" target=”_blank”><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
             <td><details open><summary><a href="http://attempt.press" target=”_blank”>Attempt's Portfolio</a></summary><a href="http://attempt.press" target=”_blank”><img class="website-img" src="../images/websites/attempt.gif" loading="lazy"></a></details></td>
@@ -92,22 +121,6 @@
                 <p>✏️ Tools: Svelte, HTML, CSS, JS.</p>
             </td>
             <td><a href="https://www.dekapitalisten.nl/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”>Borrar con el dedo lo que se hace con otro</a></summary><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”><img class="website-img" src="../images/websites/borrarconeldedo.gif" loading="lazy"></a></details></td>
-            <td>Website design and development for the online art exhibition "borrar con el dedo lo que se hace con otro" by <a href="https://www.rastro.studio/" target="_blank">Rastro</a>. "<i>Erasing with one finger what is done with another</i> is a Rastro curatorship that questions the possible materializations that digital repetition makes possible. In the contemporary world where our existence is projected as connected fragments and which is built from small corporeal repetitions, it is necessary to dwell on those daily automatisms that cross us unnoticed like the inertia of a global wave." <br>
-                <p>🏓 Design Collab: Maria Paris.</p>
-                <p>✏️ Tools: HTML, CSS, JS.</p>
-            </td>
-            <td><a href="https://www.rastro.studio/borrar-con-el-dedo-lo-que-se-hace-con-otro/" target=”_blank”><button class="url">⤴︎</button></a></td>
-        </tr>
-        <tr>
-            <td><details open><summary><a href="https://www.rastro.studio/" target=”_blank”>Rastro</a></summary><a href="https://www.rastro.studio/" target=”_blank”><img class="website-img" src="../images/websites/rastrostudio.gif" loading="lazy"></a></details></td>
-            <td>Website design and development for the collective <a href="https://www.instagram.com/rastro.bog/" target="_blank">Rastro</a>. For this project in collaboration with Maria we design a space that show case their present and future projects. We developed this project under the umbrella of our publishing project called <a href="https://attempt.press" target="_blank">attempt</a><br>
-                <p>🏓 Design Collab: Maria Paris.</p>
-                <p>✏️ Tools: HTML, CSS, JS.</p>
-            </td>
-            <td><a href="https://www.rastro.studio/" target=”_blank”><button class="url">⤴︎</button></a></td>
         </tr>
         <tr>
             <td><details open><summary><a href="https://issue.xpub.nl/13/ATATA/index_text.html" target=”_blank”>Atata</a></summary><a href="https://issue.xpub.nl/13/ATATA/index_text.html" target=”_blank”><img class="website-img" src="../images/websites/atata.gif" loading="lazy"></a></details></td>
