--- a/floatingwords/index.html
+++ b/floatingwords/index.html
@@ -10,20 +10,15 @@
     <header>
         <a href="mailto:camicasi93@hotmail.com" class="btn">✶ Buy Garments</a>
         <section id="info_section">
-            <a id="info_btn" class="btn">➤ Info</a>
+            <a id="info_btn" class="btn">✴ Info</a>
             <div id="text_info">
                 <p>All the stamped designs on the garments were hand cut and pressed by me using leftover material from <a href="https://diantres.co/" target="_blank">Diantres</a>, a screenprinting and design studio from Bogota, Colombia. I'm grateful for your generosity and love.</p> <p> The text "They Dream" was written by Nicolás Castro. </p> <p>All the drawings are part of an ongoing practice to communicate beyond meaning and sense.</p> 
                 <p>All of the garments are single pieces and the ones marked with a ↺ were found in second-hand shops.</p>
             </div>
         </section>
-        <a class="btn" id="drawings_btn">❋ Drawings</a>
+        <a class="btn" id="drawings_btn" href="drawings/">❋ Drawings</a>
+        <a class="btn" id="drawings_btn" href="publication/">⭑ Publication</a>
     </header>
-    <section style="margin: 0;" id="drawings_section">
-        <img class="drawing" src="images/floatingwords-1.jpg" loading="lazy">
-        <img class="drawing" src="images/FloatingWords-2.jpg" loading="lazy">
-        <img class="drawing" src="images/FloatingWords-3.jpg" loading="lazy">
-        <img class="drawing" src="images/FloatingWords-4.jpg" loading="lazy">
-    </section>
     <section class="shop">
         <figure class="garment left">
             <img id="mini-img" src="images/mini-sweatshirt.png">
